Examples Improved - FMA Dialect refactored (#570)
* Fix examples README and javadoc

* Refactor FMA Op example to use multiFilter and clean-up

* [samples] Clean-up