@@ -51,7 +51,7 @@ import java.util.stream.Stream;
  * <p>
  *     How to run?
  *     <code>
- *          java --enable-preview -cp target/crsamples-1.0-SNAPSHOT.jar oracle.code.samples.HelloCodeReflection
+ *          java --add-modules jdk.incubator.code -cp target/crsamples-1.0-SNAPSHOT.jar oracle.code.samples.HelloCodeReflection
  *     </code>
  * </p>
  */
